--- a/index.html
+++ b/index.html
@@ -310,53 +310,57 @@
                                 <div class="card">
                                     <img src="assets/img/user1.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a
-                                            natural lead-in to additional content. This content is a little bit longer.
+                                        <h5 class="card-title">David Warner</h5>
+                                        <h6 class="card-subtitle  text-body-secondary mb-2">HR Manager</h6>
+                                        <p class="card-text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates minima, totam asperiores repudiandae autem aliquam.
                                         </p>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div><!--Single Card End-->
                         <div class="carousel-item">
                             <div class="col-8 offset-2">
                                 <div class="card">
                                     <img src="assets/img/user2.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a
-                                            natural lead-in to additional content. This content is a little bit longer.
+                                        <h5 class="card-title">Lily Joans</h5>
+                                        <h6 class="card-subtitle  text-body-secondary mb-2">Software Engineer</h6>
+                                        <p class="card-text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates minima, totam asperiores repudiandae autem aliquam.
                                         </p>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div><!--Single Card End-->
                         <div class="carousel-item">
                             <div class="col-8 offset-2">
                                 <div class="card">
                                     <img src="assets/img/user3.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a
-                                            natural lead-in to additional content. This content is a little bit longer.
+                                        <h5 class="card-title">Kevin Williams</h5>
+                                        <h6 class="card-subtitle  text-body-secondary mb-2">Accounts Manager</h6>
+                                        <p class="card-text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates minima, totam asperiores repudiandae autem aliquam.
                                         </p>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div><!--Single Card End-->
                         <div class="carousel-item">
                             <div class="col-8 offset-2">
                                 <div class="card">
                                     <img src="assets/img/user4.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a
-                                            natural lead-in to additional content. This content is a little bit longer.
+                                        <h5 class="card-title">Phoebe Anderson</h5>
+                                        <h6 class="card-subtitle  text-body-secondary mb-2">Graphics Designer</h6>
+                                        <p class="card-text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates minima, totam asperiores repudiandae autem aliquam.
                                         </p>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div><!--Single Card End-->
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
                         data-bs-slide="prev">
