--- a/about.html
+++ b/about.html
@@ -62,6 +62,45 @@
     </nav>
     <!-- Navbar Section End -->
 
+    <!-- About Company Section Start -->
+     <section id="about-company" class="my-5">
+        <section class="container">
+            <div class="title text-center mb-sm-3 mb-md-4">
+                <h1 class="h1">
+                    About Our Company
+                </h1>
+            </div>
+            <div class="row align-items-center gy-4">
+                <!-- Company Descriptio Section Start -->
+                <div class="col-md-6 order-2 order-md-1 pe-md-5">
+                    <h3 class="h3 mb-2">
+                        AllJobs BD
+                    </h3>
+                    <h6 class="h6 mb-3">
+                        Lorem ipsum dolor sit amet consectetur.
+                    </h6>
+                    <p class="lead m-0">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ad saepe accusantium quis illum magni possimus porro dignissimos incidunt dolorem. Magni amet sunt dolorem commodi doloremque porro vel perferendis id!
+                    </p><br>
+                    <p class="lead m-0">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ad saepe accusantium quis illum magni possimus porro dignissimos incidunt dolorem. Magni amet sunt dolorem commodi doloremque porro vel perferendis id!
+                    </p><br>
+                    <p class="lead m-0">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ad saepe accusantium quis illum magni possimus porro dignissimos incidunt dolorem. Magni amet sunt dolorem commodi doloremque porro vel perferendis id!
+                    </p>
+                </div>
+                <!-- Company Descriptio Section End -->
+
+                <!-- Company Image Section -->
+                <div class="col-md-6 order-1 order-md-2">
+                    <img src="assets/img/company.jpg" alt="" class="d-block w-100 rounded mb-2">
+                    <p class="fs-6 text-body-secondary m-0">Company Headquarter</p>
+                </div>
+                <!-- Company Image Section -->
+            </div>
+        </section>
+     </section>
+    <!-- About Company Section End -->
 
     <!-- Footer Section Start -->
     <footer id="footer">
